Implementatie welkomstpagina afgerond.

--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
   <li>Honden</li>
   <li>Katten</li>
 </ul>
+    <p>Het <a href="dieren.html">overzicht</a> van aanwezige dieren</p>
   </body>
 </html>
